--- a/index.css
+++ b/index.css
@@ -51,3 +51,19 @@ body {
     padding: 8px 24px;
     border: none;
 }
+
+/* search section */
+
+.search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 128px 256px;
+    background-color: #dadbf1;
+}
+
+.search-title {
+    font-size: 5rem;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
