--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* header section */
 
 .header {
@@ -66,4 +70,42 @@ body {
     font-size: 5rem;
     font-weight: 800;
     margin-bottom: 24px;
+}
+
+/* hero section */
+
+.hero {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 192px 128px;
+    justify-content: center;
+}
+
+.card-img img {
+    height: 80px;
+}
+
+.hero-card {
+    display: flex;
+    width: 420px;
+    gap: 24px;
+    width: 600px;
+    margin: 0 48px 48px 0;
+}
+
+
+
+.content-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+
+.content-description {
+    font-size: 1.5rem;
+    margin-bottom: 16px;
+}
+
+.content-link {
+    font-size: 1.125rem;
 }
