--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@ a {
     text-decoration: none;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+}
+
 /* header section */
 
 .header {
@@ -108,4 +115,31 @@ a {
 
 .content-link {
     font-size: 1.125rem;
+}
+
+/* footer section */
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    padding: 64px 128px;
+    background-color: black;
+    color: #fff;
+}
+
+h2 {
+    font-weight: bold;
+}
+
+h3 {
+    font-weight: bold;
+}
+
+.footer-copyrights {
+    margin-top: 100px;
+}
+
+.footer a {
+    color: #fff;
+    font-weight: 100;
 }
